[gd_scene load_steps=10 format=3 uid="uid://doecc38wvpm3k"]

[ext_resource type="Script" uid="uid://eqto2d5mhk60" path="res://Escenas/Menu_Handler.gd" id="1_0fbet"]
[ext_resource type="Texture2D" uid="uid://cbl3c1lvjbvjq" path="res://Recursos/Imagenes/boton.png" id="3_iy58a"]
[ext_resource type="FontFile" uid="uid://jse5vf2o10b8" path="res://Recursos/Otros/GrapeSoda.ttf" id="4_6a6wx"]
[ext_resource type="Texture2D" uid="uid://bhr8al78lf0ub" path="res://Recursos/Imagenes/wp.png" id="5_sky72"]
[ext_resource type="Texture2D" uid="uid://cdhg10onvlcek" path="res://Recursos/Imagenes/icon.png" id="6_0ytqx"]
[ext_resource type="Texture2D" uid="uid://c4eh5uim62wod" path="res://Recursos/Imagenes/idea_chinga.png" id="7_pxugv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eh0v1"]
bg_color = Color(0.143405, 0.0184957, 0.0319131, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_am1vj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iy58a"]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eh0v1")

[node name="Button" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 719.0
offset_top = 474.0
offset_right = 1090.0
offset_bottom = 589.0
theme_override_font_sizes/font_size = 50
text = "-"

[node name="Botones_Side" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 281.0
offset_right = 256.0
offset_bottom = 633.0

[node name="NinePatchRect" type="NinePatchRect" parent="Panel/Botones_Side"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_iy58a")

[node name="Play" type="Button" parent="Panel/Botones_Side/NinePatchRect"]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_6a6wx")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_am1vj")
text = "Jugar"

[node name="NinePatchRect2" type="NinePatchRect" parent="Panel/Botones_Side"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_iy58a")

[node name="Settings" type="Button" parent="Panel/Botones_Side/NinePatchRect2"]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_6a6wx")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_am1vj")
text = "Ajustes"

[node name="NinePatchRect3" type="NinePatchRect" parent="Panel/Botones_Side"]
visibility_layer = 3
z_index = 1
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_iy58a")

[node name="Quit" type="Button" parent="Panel/Botones_Side/NinePatchRect3"]
texture_filter = 1
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_6a6wx")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_am1vj")
text = "Salir"

[node name="Fondo" type="NinePatchRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_sky72")

[node name="Config_Tab" type="Panel" parent="Panel"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.0
offset_top = -250.0
offset_right = 385.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iy58a")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Config_Tab"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -60.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="Button" type="Button" parent="Panel/Config_Tab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Juego"

[node name="Button2" type="Button" parent="Panel/Config_Tab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HUD"

[node name="Button3" type="Button" parent="Panel/Config_Tab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sonido"

[node name="Button" type="Button" parent="Panel/Config_Tab"]
custom_minimum_size = Vector2(-10, -10)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 0
text = "X"

[node name="Panel" type="Panel" parent="Panel/Config_Tab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Config_Tab/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ventana" type="Label" parent="Panel/Config_Tab/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Modo de ventana:"

[node name="Settings_Tab" type="Panel" parent="Panel"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.0
offset_top = -250.0
offset_right = 385.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iy58a")

[node name="Panel" type="Panel" parent="Panel/Settings_Tab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Settings_Tab/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ventana" type="Label" parent="Panel/Settings_Tab/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Â¿Estas seguro que deseas salir?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Settings_Tab/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Salir" type="Button" parent="Panel/Settings_Tab/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Salir"

[node name="Volver" type="Button" parent="Panel/Settings_Tab/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volver"

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(137.5, 149)
rotation = -0.279469
scale = Vector2(0.295898, 0.334473)
texture = ExtResource("6_0ytqx")

[node name="IdeaChinga" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(606, 291)
scale = Vector2(0.873047, 0.824219)
texture = ExtResource("7_pxugv")

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Panel/Button" to="." method="_on_button_toggled"]
[connection signal="pressed" from="Panel/Botones_Side/NinePatchRect/Play" to="." method="play_pressed"]
[connection signal="pressed" from="Panel/Botones_Side/NinePatchRect2/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/Botones_Side/NinePatchRect3/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/Config_Tab/Button" to="." method="cfg_exit_pressed"]
[connection signal="pressed" from="Panel/Settings_Tab/Panel/VBoxContainer/HBoxContainer/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Panel/Settings_Tab/Panel/VBoxContainer/HBoxContainer/Volver" to="." method="_on_volver_pressed"]
